# bwap

./: .gitignore  .project  CMakeLists.txt  README.md  bwap-diagram.xps  make_install.sh  unstickymem.ini
contrib/: check-stall-rate.sh  check-time.sh  setup-counters-amd.sh  setup-counters-intel.sh
include/better-enums/: enum.h
include/unstickymem/: Logger.hpp  PagePlacement.hpp  PerformanceCounters.hpp  Runtime.hpp  unstickymem.h  wrap.hpp
include/unstickymem/memory/: MemoryMap.hpp  MemorySegment.hpp  MySharedMemory.hpp
include/unstickymem/mode/: AdaptiveMode.hpp  DisabledMode.hpp  FixedRatioMode.hpp  Mode.hpp  ScanMode.hpp  WeightedAdaptiveMode.hpp
src/unstickymem/: Logger.cpp  PagePlacement.cpp  PerformanceCounters.cpp  Runtime.cpp  unstickymem.cpp  wrap.cpp
src/unstickymem/memory/: MemoryMap.cpp  MemorySegment.cpp
src/unstickymem/mode/: AdaptiveMode.cpp  DisabledMode.cpp  FixedRatioMode.cpp  Mode.cpp  ScanMode.cpp  WeightedAdaptiveMode.cpp
test/: bench-private.c  bench-shared.c  bwap_gd_executor.c  test_allocations.c  test_hello_world.c
weights/: weights_1w.txt  weights_2w.txt
